--- a/src/ThisGoesHere/packages.config
+++ b/src/ThisGoesHere/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Pfhoenix.Valheim.ModProjectReferences" version="1.0.11" targetFramework="net472" />
-  <package id="YamlDotNet" version="11.2.1" targetFramework="net472" />
+  <package id="BepInEx.BaseLib" version="5.4.17" targetFramework="net35" />
+  <package id="BepInEx.Core" version="5.4.17" targetFramework="net35" />
+  <package id="HarmonyX" version="2.5.5" targetFramework="net35" />
+  <package id="Mono.Cecil" version="0.10.4" targetFramework="net35" />
+  <package id="MonoMod.RuntimeDetour" version="21.8.19.1" targetFramework="net35" />
+  <package id="MonoMod.Utils" version="21.8.19.1" targetFramework="net35" />
+  <package id="YamlDotNet" version="11.2.1" targetFramework="net35" />
 </packages>
